service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnetapp
  namespace: ##POD_IDENTITY_NAMESPACE##
spec:
  selector:
    app: aspnetapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
